<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/slideViewPager"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_padding"
                android:gravity="center"
                android:text="@string/dindinn"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/content_padding_almost_large"
                android:background="@android:color/transparent"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/slideViewPager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabBackground="@drawable/tab_page_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/categoryTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="@dimen/content_padding"
                android:background="@drawable/top_round"
                android:gravity="center|top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayout"
                app:tabGravity="fill"
                app:tabIndicatorHeight="0dp"
                app:tabSelectedTextColor="@color/selected_dark"
                app:tabTextAppearance="@style/LargeTabItem"
                app:tabTextColor="@color/unselected_dark">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pizza_item" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sushi_item" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drink_item" />
            </com.google.android.material.tabs.TabLayout>

            <LinearLayout
                android:id="@+id/filterContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/content_padding"
                android:layout_marginTop="@dimen/content_padding"
                android:layout_marginEnd="@dimen/content_padding"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryTabLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/content_padding"
                    android:background="@drawable/secondary_btn"
                    android:text="@string/spicy_filter"
                    android:textSize="12sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/content_padding"
                    android:background="@drawable/secondary_btn"
                    android:text="@string/vegan_filter"
                    android:textSize="12sp" />
            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/snackItemsViewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filterContainer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cartFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:elevation="@dimen/content_padding"
        app:backgroundTint="@color/white"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_shopping_cart"
        android:contentDescription="@string/go_to_cart_desc" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

